Fix width on Mobile Css

--- a/styles.css
+++ b/styles.css
@@ -336,8 +336,6 @@ background-color: white;
 
   .idea-cards-main-area {
     display: grid;
-    min-width: 150px;
-    width: auto;
     grid-template-rows: fit-content(100%);
     padding: 3%;
     /* still need to make rows appear on mobile view. */
